set overflow in the x axis to avoid movement

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   width: 1440px;
   height: 916px;
   background: #fff;
+  overflow-x: hidden;
 }
 
 .logo {
